# XIAO_PAWR_AP

./: CMakeLists.txt  main.py  prj.conf  pyproject.toml  uart_sender.py
boards/: app.overlay
src/: command.proto  main.c
